* photo-cell complete * clean up * logs removed * component memory handling added

--- a/src/app/components/photo-list/photo-list.component.html
+++ b/src/app/components/photo-list/photo-list.component.html
@@ -1,20 +1,11 @@
-<!--  <div class="input-group mb-3">-->
-<!--    <input type="text" class="form-control" placeholder="search keywords..." aria-label="Recipient's username"-->
-<!--           aria-describedby="basic-addon2"  [formControl]="searchInput">-->
-<!--    <div class="input-group-append">-->
-<!--      <span class="input-group-text" id="basic-addon2">from flickr</span>-->
-<!--    </div>-->
-<!--    </div>-->
-
 <div class="container">
-
   <div class="row">
     <div class="col-sm">
       <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="search keywords.."
+        <input type="text" class="form-control" placeholder="enter keywords.."
                aria-describedby="basic-addon2" [formControl]="searchInput">
         <div class="input-group-append">
-          <span class="font-italic font-weight-bold" id="basic-addon2">...mosaic flickr grid</span>
+          <span class="font-italic font-weight-bold" id="basic-addon2">  ...A Mosaic Flickr Grid</span>
         </div>
       </div>
     </div>
@@ -24,20 +15,24 @@
       </div>
     </div>
   </div>
-</div>
-
-<div class="grid">
-  <div
-    infinite-scroll
-    [infiniteScrollDistance]="distance"
-    [infiniteScrollThrottle]="throttle"
-    (scrolled)="onScroll()"
-  >
-    <div class="card-columns">
-      <ng-container *ngFor="let item of photos">
-        <photo-cell [title]="item.title" [url]="item.srcUrl" [photoId]="item.id"></photo-cell>
-      </ng-container>
+  <div class="grid">
+    <div
+      infinite-scroll
+      [infiniteScrollDistance]="distance"
+      [infiniteScrollThrottle]="throttle"
+      (scrolled)="onScroll()"
+    >
+      <div class="card-columns">
+        <ng-container *ngFor="let item of photos">
+          <photo-cell [title]="item.title" [url]="item.srcUrl" [photoId]="item.id"></photo-cell>
+        </ng-container>
+      </div>
     </div>
+
+    <ng-container *ngIf="noContentTemplate | async">
+      <div class="card-columns">
+        <span>No content available</span>
+      </div>
+    </ng-container>
   </div>
 </div>
-
