--- a/src/app/components/photo-detail/photo-detail.component.html
+++ b/src/app/components/photo-detail/photo-detail.component.html
@@ -1,19 +1,20 @@
+
 <div class="container">
-  <div class="col-md-8">
-    <div class="row">
+  <div class="row">
+    <div class="col-md offset-md-7">
       <div *ngIf="spinner | async" class="spinner-border text-info" role="status">
         <span class="sr-only">Loading...</span>
       </div>
     </div>
   </div>
-
   <div class="row">
-    <div class="col-md-8 offset-md-2">
-      <div class="card" style="width: 50rem; height: 50rem}">
+    <div class="col-md-6 offset-md-4">
+      <div class="card" style="width: 40rem; height: 40rem}">
         <img class="card-img-top" [src]="url" [alt]="title"/>
         <div class="card-body">
           <h5 class="card-title">{{ title }}</h5>
-          <p class="card-text">Content by {{ username}}, realname {{ author }}.</p>
+          <p class="card-text">Content by '{{ username || 'not known'}}', real name '{{ author || 'not known' }}'.</p>
+          <a [routerLink]="['../../photo-search']">Back to search</a>
         </div>
       </div>
     </div>
