--- a/src/app/components/photo-list/photo-list.component.css
+++ b/src/app/components/photo-list/photo-list.component.css
@@ -1,15 +1,67 @@
-.grid {
-  margin:1em;
-  display:flex;
-  flex-wrap:wrap;
-  justify-content:space-around;
-  grid-template-columns: 1fr 1fr 1fr 1fr; /* Create 4 columns and auto-place rows */
+/*.grids {*/
+/*  max-width: 1600px;*/
+/*  margin: auto auto;*/
+/*  display: grid;*/
+/*  grid-gap: 1rem;*/
+/*}*/
+
+/*@media (min-width: 600px) {*/
+/*  .grids { grid-template-columns: repeat(2, 1fr); }*/
+/*}*/
+
+/*@media (min-width: 900px) {*/
+/*  .grids { grid-template-columns: repeat(3, 1fr); }*/
+/*}*/
+
+/*@media (min-width: 1600px) {*/
+/*  .grids { grid-template-columns: repeat(4, 1fr); }*/
+/*}*/
+
+/*.form-control {*/
+/*  border: 0;*/
+/*}*/
+
+
+.grids {
+  /* Prevent vertical gaps */
+  line-height: 0;
+
+  -webkit-column-count: 5;
+  -webkit-column-gap:   0px;
+  -moz-column-count:    5;
+  -moz-column-gap:      0px;
+  column-count:         5;
+  column-gap:           0px;
 }
 
-.container {
-  margin: 2em;
+@media (max-width: 1200px) {
+  .grids {
+    -moz-column-count:    4;
+    -webkit-column-count: 4;
+    column-count:         4;
+  }
 }
 
-.form-control {
-  border: 0;
+@media (max-width: 1000px) {
+  .grids {
+    -moz-column-count:    3;
+    -webkit-column-count: 3;
+    column-count:         3;
+  }
+}
+
+@media (max-width: 800px) {
+  .grids {
+    -moz-column-count:    2;
+    -webkit-column-count: 2;
+    column-count:         2;
+  }
+}
+
+@media (max-width: 600px) {
+  .grids {
+    -moz-column-count:    1;
+    -webkit-column-count: 1;
+    column-count:         1;
+  }
 }
