--- a/src/app/components/photo-list/photo-list.component.html
+++ b/src/app/components/photo-list/photo-list.component.html
@@ -1,38 +1,37 @@
-<div class="container">
-  <div class="row">
-    <div class="col-sm">
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="enter keywords.."
-               aria-describedby="basic-addon2" [formControl]="searchInput">
-        <div class="input-group-append">
-          <span class="font-italic font-weight-bold" id="basic-addon2">  ...A Mosaic Flickr Grid</span>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm">
-      <div *ngIf="spinner | async" class="spinner-border text-info" role="status">
-        <span class="sr-only">Loading...</span>
-      </div>
-    </div>
-  </div>
-  <div class="grid">
-    <div
-      infinite-scroll
-      [infiniteScrollDistance]="distance"
-      [infiniteScrollThrottle]="throttle"
-      (scrolled)="onScroll()"
-    >
-      <div class="card-columns">
-        <ng-container *ngFor="let item of photos">
-          <photo-cell [title]="item.title" [url]="item.srcUrl" [photoId]="item.id"></photo-cell>
-        </ng-container>
-      </div>
-    </div>
+<!--  <div class="row">-->
+<!--    <div class="col-sm">-->
+<!--      <div class="input-group mb-3">-->
+<!--        <input type="text" class="form-control" placeholder="enter keywords.."-->
+<!--               aria-describedby="basic-addon2" [formControl]="searchInput">-->
+<!--        <div class="input-group-append">-->
+<!--          <span class="font-italic font-weight-bold" id="basic-addon2">  ...A Mosaic Flickr Grid</span>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--    <div class="col-sm">-->
+<!--      <div *ngIf="spinner | async" class="spinner-border text-info" role="status">-->
+<!--        <span class="sr-only">Loading...</span>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
 
-    <ng-container *ngIf="noContentTemplate | async">
-      <div class="card-columns">
-        <span>No content available</span>
-      </div>
+
+<div class="grids">
+
+  <!--  <infinite-scroll (scrolled)="onScroll()">-->
+  <div>
+    <ng-container *ngFor="let item of photosForGrid">
+      <photo-cell
+        [title]="item.title"
+        [url]="item.srcUrl"
+        [photoId]="item.id"
+        [height]="item.height"
+        [width]="item.width">
+      </photo-cell>
+
     </ng-container>
   </div>
+
+  <!--  </infinite-scroll>-->
+
 </div>
