* spinner replaced by global spinner * sticky header refactored * loader interceptor to manage global spinner

--- a/src/app/grid-container/grid-container.component.html
+++ b/src/app/grid-container/grid-container.component.html
@@ -1,32 +1,30 @@
 <div>
   <div>
-    <!--    <div-->
-    <!--      infinite-scroll-->
-    <!--      [infiniteScrollDistance]="distance"-->
-    <!--      [infiniteScrollThrottle]="throttle"-->
-    <!--      (scrolled)="onScroll()">-->
-    <!--    </div>-->
+    <search-term (outputTerm)="onTermOutput($event)"></search-term>
+  </div>
+
+  <c-infinite-scroll (scrolled)="onScroll()">
     <div>
-      <search-term (outputTerm)="onTermOutput($event)"></search-term>
+      <app-photo-list [photosForGrid]="photos"></app-photo-list>
+      <ng-container *ngIf="noContentTemplate | async">
+        <div class="card-columns">
+          <span>No content available</span>
+        </div>
+      </ng-container>
     </div>
-    <c-infinite-scroll (scrolled)="onScroll()">
-      <div>
-        <app-photo-list [photosForGrid]="photos"></app-photo-list>
-        <ng-container *ngIf="noContentTemplate | async">
-          <div class="card-columns">
-            <span>No content available</span>
-          </div>
-        </ng-container>
-      </div>
-    </c-infinite-scroll>
-  </div>
-  <div>
-    <ngx-scrolltop [size]="50"
-                   backgroundColor="#33691e"
-                   symbolColor="#fff"
-                   mode="smart"
-                   position="right">
-      <fa-icon [icon]="faLongArrowAltUp"></fa-icon>
-    </ngx-scrolltop>
-  </div>
+  </c-infinite-scroll>
+</div>
+
+<div>
+  <ngx-scrolltop [size]="50"
+                 backgroundColor="#1b86c4"
+                 symbolColor="#fff"
+                 mode="smart"
+                 position="right">
+    <fa-icon [icon]="faLongArrowAltUp"></fa-icon>
+  </ngx-scrolltop>
+</div>
+
+<div style="margin: 2rem">
+  <global-spinner></global-spinner>
 </div>
