--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-sticky-header> <h1>Searching keyword/s ...</h1> <h3> {{ title }} </h3> </app-sticky-header>
+<app-sticky-header> <h3> {{ flickrData.term.value }} ..pics </h3> </app-sticky-header>
 <router-outlet></router-outlet>
 
