--- a/src/app/components/photo-detail/photo-detail.component.html
+++ b/src/app/components/photo-detail/photo-detail.component.html
@@ -14,7 +14,7 @@
         <div class="card-body">
           <h5 class="card-title">{{ title }}</h5>
           <p class="card-text">Content by '{{ username || 'not known'}}', real name '{{ author || 'not known' }}'.</p>
-          <a [routerLink]="['../../photo-search']">Back to search</a>
+          <a [routerLink]="['../photo-search']">Back to search</a>
         </div>
       </div>
     </div>
