--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,13 @@
-<div class="login">
-  <button
-    (click)="submit()"
-    type="button"
-  >
-    Login in with Auth0
-  </button>
+<div class="bg">
+  <div class="login">
+    <button
+      (click)="submit()"
+      type="button"
+    >
+      Login in with Auth0
+    </button>
+  </div>
 </div>
+
+
+<!--"{'background-image': this.photo ? 'url(' + this.photo + ')' : 'https://placehold.it/70x70', 'background-position': 'center' }"-->
