--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,3 +18,16 @@ app-sticky-header h1 {
   font-family: "Times New Roman";
   font-size: 2rem;
 }
+
+.container{
+  background-image: url('https://www.pexels.com/photo/bird-s-eye-view-of-pine-trees-3312678/');
+}
+
+.bg {
+  width: 100%;
+  height: 100%;
+  background-image: url('https://www.pexels.com/photo/bird-s-eye-view-of-pine-trees-3312678/');
+  background-size: 100% 100%;
+  background-position: top center;
+
+}
