--- a/src/app/components/search-term/search-term.component.css
+++ b/src/app/components/search-term/search-term.component.css
@@ -1,14 +1,35 @@
-.cards {
-  max-width: 1200px;
-  margin: 0 auto;
-  display: grid;
-  grid-gap: 1rem;
+.io {
+  margin-top: 0.5rem
+}
+.text-center{
+  font-family: "Helvetica","Times New Roman";
+}
+.full-width {
+  width: 100%;
+  background: #ccc;
+}
+.search-sec{
+  padding: 0.5rem;
+  border: 3px solid cadetblue;
+}
+.search-slt{
+  display: block;
+  width: 100%;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  height: calc(3rem + 2px) !important;
+  border-radius:0;
 }
 
-@media (min-width: 600px) {
-  .cards { grid-template-columns: repeat(2, 1fr); }
-}
-
-.form-control {
-  border: 0;
+.wrn-btn{
+  width: 100%;
+  background: rgba(127, 204, 193, .2);
+  font-size: 16px;
+  font-weight: 10000;
+  text-transform: capitalize;
+  height: calc(3rem + 2px) !important;
+  border-radius:0;
 }
