--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-sticky-header><h3> {{ flickrData.term.value }} ..pics </h3></app-sticky-header>
+<app-sticky-header><h3> {{ flickrData.term.value }} </h3></app-sticky-header>
 <router-outlet></router-outlet>
