* some fixes * whitespace added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-sticky-header><h3> {{ flickrData.term.value }} </h3></app-sticky-header>
+<app-sticky-header>
+  <h3>{{ flickrData.term.value }} </h3>
+  <h6>&nbsp;&nbsp;&nbsp;scroll for more results </h6>
+</app-sticky-header>
 <router-outlet></router-outlet>
