--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,4 +1,4 @@
-@import "../../styles.scss";
+@import "src/styles";
 
 
 div {
@@ -54,7 +54,7 @@ div {
 .bg {
   width: 100%;
   height: 100%;
-  background-image: url("../../../assetz/login-pic.jpg");
+  background-image: url("assetz/login-pic.jpg");
   background-size: 100% 100%;
   background-position: top center;
 }
