--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -54,7 +54,7 @@ div {
 .bg {
   width: 100%;
   height: 100%;
-  background-image: url('assets/login-pic.jpg');
+  background-image: url('/assets/login-pic.jpg');
   background-size: 100% 100%;
   background-position: top center;
 }
