--- a/src/app/components/photo-detail/photo-detail.component.css
+++ b/src/app/components/photo-detail/photo-detail.component.css
@@ -1,7 +1,11 @@
 .container {
-  margin: 1em;
+  margin-top: 1em;
 }
 
 .text-style {
   font-family: 'Helvetica', 'Sans-Serif';
+}
+.card-img-top {
+  width:100%;
+  height:auto;
 }
