--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,12 @@
 $primaryBtn: #3928ac;
 
 
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
 
+@import '~src/assets/main.scss';
+
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
