* index.html update

--- a/src/app/components/search-term/search-term.component.html
+++ b/src/app/components/search-term/search-term.component.html
@@ -8,7 +8,7 @@
             </div>
             <div class="col-sm-5">
               <div class="io">
-                <h3 class="text-center">Digital Flickr Mosaic Grid</h3>
+                <h3 class="text-center">Mosaic Photo Grid</h3>
               </div>
             </div>
             <div class="col-sm-2">
